--- a/src/main/resources/templates/fragments/aboutus.html
+++ b/src/main/resources/templates/fragments/aboutus.html
@@ -141,30 +141,34 @@
     </div>
 
     <div class="card">
-      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="Jeanne Card">
+      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/eka.JPG?raw=true" alt="Jeanne Card">
       <div class="card-content">
         <div class="card-title">Eka Verarina</div>
         <div class="details">
           NIM: 24111814004<br>
           Role: Tetua <br>
           Raja Iblis<br>
-          Dit Tolongin Dit
-        </div>
-      </div>
-    </div>
-
-    <div class="card">
-      <img th:src="@{asset/rahma.jpg}" alt="Narmaya Card">
-      <div class="card-content">
-        <div class="card-title">Prima Miftakhul Rahma</div>
-        <div class="details">
-          NIM: 24111814005<br>
-          <a href="https://github.com/PrimaRahma" class="text-primary me-2"><i class="fab fa-github"></i></a>
+         "sleeping entusiasm"
+         <a href="https://github.com/PrimaRahma" class="text-primary me-2"><i class="fab fa-github"></i></a>
           <a href="https://www.instagram.com/rhma.taa?igsh=MWU2eTkzb2VqdnRxZw==" class="text-danger me-2"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </div>
 
+    <div class="card">
+      <img src="https://raw.githubusercontent.com/kaekka/Tugas-PBO-Sampe-UAS/Novel-Web/src/main/resources/static/asset/rahma.jpg" alt="Prima Rahma">
+      <div class="card-content">
+        <div class="card-title">Prima Miftakhul Rahma</div>
+        <div class="details">
+          NIM: 24111814005<br>
+          Role: bagian artikel<br>
+          malaikat maut <br>
+          "makan, tidur, ulangi!"
+        <a href="https://github.com/PrimaRahma" class="text-primary me-2" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/rhma.taa?igsh=MWU2eTkzb2VqdnRxZw==" class="text-danger me-2" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
+      </div>
+    </div>
     <div class="card">
       <img th:src="@{asset/Dwi2.jpg}" alt="Narmaya Card">
       <div class="card-content">
@@ -192,7 +196,7 @@
     </div>
 
     <div class="card">
-      <img src=<img th:src="@{asset/Farid.jpeg}" alt="Djeeta Card">
+      <img src="https://raw.githubusercontent.com/kaekka/Tugas-PBO-Sampe-UAS/Novel-Web/src/main/resources/static/asset/Farid.jpeg" alt="Farid Card">
       <div class="card-content">
         <div class="card-title">Farid Ade Novian</div>
         <div class="details">
