--- a/src/main/resources/templates/fragments/aboutus.html
+++ b/src/main/resources/templates/fragments/aboutus.html
@@ -222,14 +222,12 @@
     </div>
 
      <div class="card">
-      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="Syva Card">
+      <img th:src="@{asset/renza.jpg}" alt="Djeeta Card">
       <div class="card-content">
         <div class="card-title">Renza Alvianino</div>
         <div class="details">
           NIM: 24111814011<br>
-          Race: Human<br>
-          Specialty: Saber<br>
-          Style: Attack
+          Role: Makhluk hidup<br>
         </div>
       </div>
     </div>
