--- a/src/main/resources/templates/fragments/aboutus.html
+++ b/src/main/resources/templates/fragments/aboutus.html
@@ -209,7 +209,7 @@
     </div>
 
  <div class="card">
-      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="Syva Card">
+      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/jeki.jpg?raw=true" alt="Syva Card">
       <div class="card-content">
         <div class="card-title">Muhammad Dzacky Maulana Yahya</div>
         <div class="details">
