mabar detik detik digoreng

--- a/src/main/resources/templates/fragments/aboutus.html
+++ b/src/main/resources/templates/fragments/aboutus.html
@@ -136,7 +136,7 @@
   <div class="container">
     <h1>NOVELKU</h1>
     <div class="about">
-      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="profile-img">
+      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/book.png?raw=true" alt="profile-img">
       <p>Novelku adalah platform digital yang menghadirkan berbagai koleksi novel terbaik karya penulis lokal dan internasional. Kami hadir untuk para pecinta sastra dan cerita, dari yang gemar membaca kisah cinta romantis, petualangan seru, hingga fantasi epik dan thriller yang menegangkan.</p>
     </div>
 
@@ -175,7 +175,7 @@
         <div class="card-title">Jenar Aditiya Bagaskara</div>
         <div class="details">
           NIM: 24111814093<br>
-          Race: Draph<br>
+          Role: All lore <br>
           Specialty: Saber<br>
           Style: Attack
         </div>
@@ -183,14 +183,14 @@
     </div>
 
     <div class="card">
-      <img th:src="@{asset/Dwi.jpg}" alt="Djeeta Card">
+      <img th:src="@{asset/alucrott.jpg}" alt="MDS">
       <div class="card-content">
         <div class="card-title">Muhammad Dwi Saputra</div>
         <div class="details">
           NIM: 24111814080<br>
-          Race: Human<br>
-          Specialty: Saber<br>
-          Style: Attack
+          Role: king <br>
+          Specialty: Memperbudak <br>
+          "Perintah king diatas ketua"
         </div>
       </div>
     </div>
@@ -233,7 +233,7 @@
     </div>
 
     <div class="posted">
-      POSTED: August 1, 2018 @ 11:35 PM
+      POSTED: May 23, 2025 @ 03:09 PM
     </div>
   </div>
 
