--- a/src/main/resources/templates/fragments/genre.html
+++ b/src/main/resources/templates/fragments/genre.html
@@ -11,7 +11,9 @@
   <!-- Romansa -->
   <div class="genre-item" title="Romansa">
     <div class="genre-icon">
+      <a th:href="@{/romansa}">
       <i class="bi bi-suit-heart"></i>
+      </a>
     </div>
     <div class="genre-label">Romansa</div>
   </div>
@@ -19,15 +21,19 @@
   <!-- Fantasi -->
   <div class="genre-item" title="Fantasi">
     <div class="genre-icon">
+      <a th:href="@{/fantasi}">
       <i class="bi bi-magic"></i>
+      </a>
     </div>
     <div class="genre-label">Fantasi</div>
   </div>
 
   <!-- Horor -->
-  <div class="genre-item" title="Horor">
+  <div class="genre-item" title="Horror">
     <div class="genre-icon">
+    <a th:href="@{/horror}">
       <i class="fa-solid fa-skull"></i>
+    </a>
     </div>
     <div class="genre-label">Horor</div>
   </div>
@@ -35,7 +41,9 @@
   <!-- Edukasi -->
   <div class="genre-item" title="Edukasi">
     <div class="genre-icon">
+      <a th:href="@{/edukasi}">
       <i class="bi bi-mortarboard-fill"></i>
+      </a>
     </div>
     <div class="genre-label">Edukasi</div>
   </div>
