--- a/src/main/resources/templates/keranjang.html
+++ b/src/main/resources/templates/keranjang.html
@@ -267,7 +267,7 @@
       <div class="cart-item" data-price="45000">
         <img src="https://via.placeholder.com/80x100" alt="Sampul Buku">
         <div class="cart-details">
-          <div class="cart-title">Judul Buku 1</div>
+          <div class="cart-title">Laskar Pelangi</div>
           <div class="text-muted">Penulis: Penulis Satu</div>
           <div class="cart-price">Rp45.000</div>
         </div>
