--- a/src/main/resources/templates/shop/keranjang.html
+++ b/src/main/resources/templates/shop/keranjang.html
@@ -19,11 +19,11 @@
     <h3 class="mb-4">Keranjang Buku</h3>
     <div id="cart-items">
       <div class="cart-item" data-price="45000">
-        <img src="https://via.placeholder.com/80x100" alt="Sampul Buku">
+        <img src="https://th.bing.com/th/id/OIP.Ctt7dvydYLCRrnmrFBEPxQHaLw?w=115&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Sampul Buku">
         <div class="cart-details">
-          <div class="cart-title">Judul Buku 1</div>
-          <div class="text-muted">Penulis: Penulis Satu</div>
-          <div class="cart-price">Rp45.000</div>
+          <div class="cart-title">Laskar Pelangi</div>
+          <div class="text-muted">by Andrea Hirata</div>
+          <div class="cart-price">Rp58.000</div>
         </div>
         <div class="input-group w-auto align-items-center mt-2 mt-md-0">
           <button class="btn btn-outline-dark btn-decrease">-</button>
@@ -34,10 +34,10 @@
       </div>
 
       <div class="cart-item" data-price="55000">
-        <img src="https://via.placeholder.com/80x100" alt="Sampul Buku">
+        <img src="https://th.bing.com/th/id/OIP.66WliD2UszlNkpNs8ZTqBwHaKs?w=135&h=195&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Sampul Buku">
         <div class="cart-details">
-          <div class="cart-title">Judul Buku 2</div>
-          <div class="text-muted">Penulis: Penulis Dua</div>
+          <div class="cart-title">Dilan: Dia adalah Dilanku tahun 1990</div>
+          <div class="text-muted">by Pidi Baiq</div>
           <div class="cart-price">Rp55.000</div>
         </div>
         <div class="input-group w-auto align-items-center mt-2 mt-md-0">
