--- a/src/main/resources/templates/fragments/aboutus.html
+++ b/src/main/resources/templates/fragments/aboutus.html
@@ -170,14 +170,14 @@
       </div>
     </div>
     <div class="card">
-      <img th:src="@{asset/Dwi2.jpg}" alt="Narmaya Card">
+      <img th:src="@{asset/Guah.jpg}" alt="Narmaya Card">
       <div class="card-content">
         <div class="card-title">Jenar Aditiya Bagaskara</div>
         <div class="details">
           NIM: 24111814093<br>
           Role: All lore <br>
-          Specialty: Saber<br>
-          Style: Attack
+          Specialty: Lord>>King<br>
+          "Perintah Lord Diatas King"
         </div>
       </div>
     </div>
