--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -202,11 +202,11 @@
     <!-- Left: Promo Diskon -->
     <div class="left">
       <div class="promo-content">
-        <img src="/asset/image.jpg" alt="Cover Novel" class="promo-img" />
+        <img src="https://th.bing.com/th/id/OIP.-evealEHjqsYVlWN7fv82AHaK-?w=146&h=217&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Cover Novel" class="promo-img" />
         <div class="promo-text">
           <div class="promo-tag">🔥 Promo Spesial</div>
           <div class="promo-title">Diskon Hingga 50%</div>
-          <div class="book-name">Novel: "Senja dan Pagi"</div>
+          <div class="book-name">Novel: "Bumi"</div>
           <div class="price"><del>Rp80.000</del><strong> Rp40.000</strong></div>
           <button>Beli Sekarang</button>
         </div>
@@ -226,35 +226,37 @@
     <div class="scroll-section">
       <div class="scroll-wrapper">
         <div class="book-card">
-          <div class="book-cover"></div>
+          <img src="https://th.bing.com/th/id/OIP.APIAdyguMRyPxxTETVQ9sQHaKn?w=208&h=299&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Cover Novel" class="promo-img" />
           <div class="book-info">
-            <h3>The Great Gatsby</h3>
-            <p class="author">F. Scott Fitzgerald</p>
-            <p class="price"><del>$15</del> <strong>$10</strong></p>
+            <h3>Omniscient Reader's Viewpoint</h3>
+            <p class="author">Sing Shong</p>
+            <p class="price"><del>Rp78.000</del> <strong> Rp68.000</strong></p>
           </div>
         </div>
         <div class="book-card">
-          <div class="book-cover"></div>
+          <img src="https://th.bing.com/th/id/OIP.-SgsKMGoRV7B1xyeCoJmWgHaLJ?w=119&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Cover Novel" class="promo-img" />
           <div class="book-info">
-            <h3>To Kill a Mockingbird</h3>
-            <p class="author">Harper Lee</p>
-            <p class="price"><del>$18</del> <strong>$12</strong></p>
+            <h3>Charlie dan Pabrik Coklat</h3>
+            <p class="author">Roald Dahl</p>
+            <p class="price"><del>Rp75.000</del> <strong> Rp60.000</strong></p>
           </div>
         </div>
         <div class="book-card">
-          <div class="book-cover"></div>
+          <img src="https://www.themoviedb.org/t/p/original/44dKzGtSDw0oFHEvAduduwjyVSZ.jpg" alt="Cover Novel" class="promo-img" />
           <div class="book-info">
-            <h3>1984</h3>
-            <p class="author">George Orwell</p>
-            <p class="price"><del>$16</del> <strong>$11</strong></p>
+            <h3>The Chronicles of Narnia</h3>
+            <p class="author">Clive Staples Lewis
+
+            </p>
+            <p class="price"><del>Rp68.000</del> <strong> Rp60.000</strong></p>
           </div>
         </div>
         <div class="book-card">
-          <div class="book-cover"></div>
+          <img src="https://upload.wikimedia.org/wikipedia/id/b/bf/Harry_Potter_and_the_Sorcerer%27s_Stone.jpg" alt="Cover Novel" class="promo-img" />
           <div class="book-info">
-            <h3>The Hobbit</h3>
-            <p class="author">J.R.R. Tolkien</p>
-            <p class="price"><del>$19</del> <strong>$13</strong></p>
+            <h3>Harry Potter and the Sorcerer's Stone</h3>
+            <p class="author">J. K. Rowling</p>
+            <p class="price"><del>Rp100.000</del> <strong> Rp80.000</strong></p>
           </div>
         </div>
       </div>
