--- a/src/main/resources/templates/shop/keranjang.html
+++ b/src/main/resources/templates/shop/keranjang.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="cart-item" data-price="55000">
-        <img src="https://th.bing.com/th/id/OIP.66WliD2UszlNkpNs8ZTqBwHaKs?w=135&h=195&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Sampul Buku">
+        <img src="https://th.bing.com/th/id/OIP.66WliD2UszlNkpNs8ZTqBwHaKs?w=135&h=195&c=7&r=0&o=5&dpr=1.3&pid=1.7s" alt="Sampul Buku">
         <div class="cart-details">
           <div class="cart-title">Dilan: Dia adalah Dilanku tahun 1990</div>
           <div class="text-muted">by Pidi Baiq</div>
