--- a/src/main/resources/templates/fragments/fantasi.html
+++ b/src/main/resources/templates/fragments/fantasi.html
@@ -274,7 +274,7 @@
 
             <div class="novel-card">
         <div class="left-section">
-          <img src="https://upload.wikimedia.org/wikipedia/id/thumb/9/99/Solo_Leveling_Webtoon.png/500px-Solo_Leveling_Webtoon.png" alt="Novel Sample" class="novel-cover">
+          <img src="https://upload.wikimedia.org/wikipedia/en/6/6c/Solo_Leveling_Volume_1_Cover.jpg" alt="Novel Sample" class="novel-cover">
           <div class="cover-icons">
             <button class="icon-btn" title="Suka"><i class="fas fa-heart"></i></button>
             <button class="icon-btn" title="Tambah ke Keranjang"><i class="fas fa-cart-plus"></i></button>
