--- a/src/main/resources/templates/shop/keranjang.html
+++ b/src/main/resources/templates/shop/keranjang.html
@@ -34,11 +34,11 @@
       </div>
 
       <div class="cart-item" data-price="55000">
-        <img src="https://th.bing.com/th/id/OIP.66WliD2UszlNkpNs8ZTqBwHaKs?w=135&h=195&c=7&r=0&o=5&dpr=1.3&pid=1.7s" alt="Sampul Buku">
+        <img src="https://upload.wikimedia.org/wikipedia/en/6/6c/Solo_Leveling_Volume_1_Cover.jpg" alt="Sampul Buku">
         <div class="cart-details">
-          <div class="cart-title">Dilan: Dia adalah Dilanku tahun 1990</div>
-          <div class="text-muted">by Pidi Baiq</div>
-          <div class="cart-price">Rp55.000</div>
+          <div class="cart-title">Solo Leveling</div>
+          <div class="text-muted">by Chugong</div>
+          <div class="cart-price">Rp95.000</div>
         </div>
         <div class="input-group w-auto align-items-center mt-2 mt-md-0">
           <button class="btn btn-outline-dark btn-decrease">-</button>
