janji yang terakhir

--- a/src/main/resources/templates/fragments/aboutus.html
+++ b/src/main/resources/templates/fragments/aboutus.html
@@ -133,7 +133,7 @@
 </head>
 <body>
 
-  <div class="container">
+    <div class="container">
     <h1>NOVELKU</h1>
     <div class="about">
       <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/book.png?raw=true" alt="profile-img">
@@ -230,6 +230,18 @@
           Role: Makhluk hidup<br>
         </div>
       </div>
+    </div>
+
+        <div style="text-align:center; margin-top: 40px;">
+      <a href="https://github.com/kaekka/Tugas-PBO-Sampe-UAS" target="_blank">
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" 
+             alt="GitHub Logo" 
+             width="50" 
+             style="transition: transform 0.3s ease;"
+             onmouseover="this.style.transform='scale(1.1)'"
+             onmouseout="this.style.transform='scale(1)'">
+        <p style="font-size: 14px; color: #555;">Github Kami</p>
+      </a>
     </div>
 
     <div class="posted">
